Fix scrollbar

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -54,7 +54,6 @@
         overflow-x: auto;
         white-space: pre;
         margin-top: 1rem;
-        margin-bottom: .5rem;
         margin-left: 0;
         padding-left: 1.5rem;
         
